--- a/build.gradle
+++ b/build.gradle
@@ -27,12 +27,15 @@ repositories {
         name = 'sonatype'
         url = 'https://oss.sonatype.org/content/groups/public/'
     }
+    maven { url "https://repo.dmulloy2.net/repository/public/" }
 }
 
 dependencies {
     compileOnly 'io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT'
     implementation 'com.google.code.gson:gson:2.10.1'
-    implementation files("libs/PDK-1.3.4.jar")
+    implementation files("libs/PDK-1.3.3.jar")
+    compileOnly 'com.comphenix.protocol:ProtocolLib:5.1.0'
+    implementation 'com.maxmind.geoip2:geoip2:2.17.0'
 }
 
 def targetJavaVersion = 17
